--- a/css/styles.css
+++ b/css/styles.css
@@ -11407,7 +11407,7 @@ p {
 header.masthead {
   padding-top: 10.5rem;
   padding-bottom: 6rem;
-  text-align: left;
+  text-align: center;
   color: #fff;
   background-image: url("../assets/img/header-bg.png");
   background-repeat: no-repeat;
